# Tetra-fund

./: .env  .gitignore  ICP_TRANSFER_TEST.md  README.md  dfx.json  dfx_ledger.sh  package-lock.json  package.json
backend/: Cargo.toml  backend.did  icp_ninja.rs  lib.rs
backend/domain/: mod.rs
backend/domain/donation/model/: donation.rs  mod.rs  transfer_data.rs
backend/domain/donation/usecase/: donation.rs  mod.rs  transfer.rs
backend/domain/fundraise/model/: fundraise_data.rs  mod.rs
backend/domain/fundraise/usecase/: get_fundraise_data.rs  mod.rs  store_fundraise_data.rs
backend/domain/storage/model/: file.rs
backend/domain/storage/usecase/: check_file_exists.rs  get_file.rs  mod.rs  upload_file.rs  usecase.rs
frontend/: index.html  jsconfig.json  vite.config.js
frontend/src/: App.jsx  Homepage.jsx  Navbar.jsx  NavigationProvider.jsx  Route.jsx  donate_modal.jsx  donation.jsx  donation_detail.jsx  footer.jsx  fundraiser.jsx  index.css  login.jsx  navbar.jsx
icp_hello_frontend/: index.html  package.json
icp_hello_frontend/src/: App.jsx  index.css  main.jsx
icp_hello_frontend/src/pages/: donation_detail.jsx  homepage.jsx  login.jsx
src/declarations/backend/: backend.did.d.ts  backend.did.js
