[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.17.1"
ic-ledger-types = "0.14.0"
ic-stable-structures = "0.6.7"
icrc-ledger-types = "0.1.8"
serde = "1.0.219"
serde_derive = "1.0.219"
